feat: 完善 v2 合集、流媒体播放与 AI 组织能力
新增媒体合集/智能合集、观看列表与播放统计，支持章节、字幕与多档转码播放；扩展 AI 分任务提供商、标签治理与库整理能力，并补齐前后端与集成测试。

Co-authored-by: Cursor <cursoragent@cursor.com>